Pull up following revision(s) (requested by dholland in ticket #1319): 	usr.bin/paste/paste.c: revision 1.15 Null-terminate the delimiter list string after processing escapes (which can shorten it) because the code that issues delimiters depends on it being null-terminated. This caused e.g. paste -d '\0' a b to print a '0' at the beginning of each line. Closes PR 41159.